--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,10 @@
   }
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 /* 3. Gunakan variabel secara langsung di body. Hapus blok @theme */
 body {
   background-color: var(--background); /* <-- Gunakan variabel langsung & perbaiki properti */
